# awareness-db

./: README.md
selfy_msgs/: CMakeLists.txt  package.xml
selfy_msgs/msg/: Classification.msg  FailedFusion.msg  Object.msg  ObjectCorrelation.msg  ObjectsListing.msg  PostFusionObject.msg  Sensor.msg  SensorCorrelation.msg
selfy_msgs/tools/: draw_objects_markers.py
